// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should render 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 bnKvHt"
    color="primary"
  />
</div>
`;

exports[`Label should render a large one 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 TiqKO"
    color="primary"
  />
</div>
`;

exports[`Label should render a small one 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 bnKvHt"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 ffDSUH"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid and danger 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 dsIPyE"
    color="danger"
  />
</div>
`;

exports[`Label should render as solid and default 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 gdMmeT"
    color="neutral"
  />
</div>
`;

exports[`Label should render as solid and primary 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 ffDSUH"
    color="primary"
  />
</div>
`;

exports[`Label should render as solid and success 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 UKHPr"
    color="success"
  />
</div>
`;

exports[`Label should render danger color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 iXzgUi"
    color="danger"
  />
</div>
`;

exports[`Label should render neutral color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 gHbVRS"
    color="neutral"
  />
</div>
`;

exports[`Label should render primary color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 bnKvHt"
    color="primary"
  />
</div>
`;

exports[`Label should render success color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 hhvRsd"
    color="success"
  />
</div>
`;

exports[`Label should render warning color 1`] = `
<div>
  <div
    class="Label-sc-4akkzw-0 jHobLS"
    color="warning"
  />
</div>
`;
